# AoC

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: benches.rs
benchmarks/src/: main.rs
day_1/src/: lib.rs  test.rs
day_2/src/: lib.rs  test.rs
day_3/: Cargo.toml
day_3/src/: lib.rs  main.rs  test.rs
day_4/src/: lib.rs  test.rs
