[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.4.0"
plotters = "0.3.0"
day_1 = { path = "../day_1" }
day_3 = { path = "../day_3" }
day_4 = { path = "../day_4" }